--- a/TietoApp/Views/Shared/_Layout.cshtml
+++ b/TietoApp/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Books", "Index", "Home")</li>
                 </ul>
             </div>
         </div>
@@ -29,7 +29,7 @@
         <p style="padding-top: 20px">
             @RenderBody()
         </p>
-        
+
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - TietoApp</p>
@@ -38,6 +38,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/Scripts")
     @RenderSection("scripts", required: false)
 </body>
 </html>
